--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "language-styled-components",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A short description of your language package",
+  "license": "MIT",
   "keywords": [
     "language",
     "grammar"
